# goit-web-hw-10

./: README.md  pyproject.toml
quotes/: db.sqlite3
quotes/app_auth/: forms.py  urls.py  views.py
quotes/app_auth/templates/app_auth/: login.html  logout.html  register.html  test.html
quotes/quot/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
quotes/quot/migrations/: 0001_initial.py  0002_author_description.py
quotes/quot/static/quot/: style.css
quotes/quot/template/quot/: base.html  index.html  test.html
quotes/quot/templates/quot/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
quotes/quot/templatetags/: extract.py
quotes/quotes/: settings.py  urls.py
quotes/utils/: migration.py
